force-app/main/default/objects/custom_create147__c/custom_create147__c.object-meta.xml
<CustomObject>
    <label>Custom created object147</label>
    <nameField>
        <label>Custom created field</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Custom created objects147</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>