force-app/main/default/objects/custom_create147__c/fields/custom_create_147field510__c.field-meta.xml
<CustomField>
    <fullName>custom_create_147field510__c</fullName>
    <defaultValue>true</defaultValue>
    <label>Custom created 147field510</label>
    <type>Checkbox</type>
</CustomField>